=== master

* Add constant_sql_override extension for overriding SQL used for constants such as CURRENT_TIMESTAMP (celsworth) (#1538)

* Do not cache from_self datasets if options are given (jeremyevans)

=== 5.12.0 (2018-08-31)

* Make constraint_validations extension respect Database#constraint_validations_table setting (jeremyevans)

* Make Sequel.extension load files from gems (jeremyevans)

* Map clob prepared statement argument type to OCI8::CLOB in the oracle adapter (pipistrellka) (#1534)

* Make Model.load_cache public in the static_cache plugin (AlexWayfer) (#1533)

* Enable support for NOWAIT on MariaDB 10.3+ (jeremyevans)

* Enable support for INTERSECT and EXCEPT on MariaDB 10.3+ (jeremyevans)

* Make tactical_eager_loading plugin handle automatic eager loading for associated objects created by eager_graph (jeremyevans)

* Cache eager_graph loader to speed up subsequent loads from the same dataset (jeremyevans)

* Add caller_logging database extension to log callers before queries, useful during development (jeremyevans)

* Add Database#call_procedure in the postgres adapter for calling PostgreSQL 11+ procedures (jeremyevans)

* Add eager_graph_eager plugin for chaining eager association loads after eager_graph association loads (jeremyevans)

* Support using Dataset#eager_graph in eager load callback for associations using join tables (jeremyevans)

* Make Dataset#graph handle existing selections without determinable aliases by forcing a subselect (jeremyevans)

* Freeze prepared statement arguments before returning the prepared statement (jeremyevans)

* Refactor emulated prepared statement internals to use a placeholder literalizer (jeremyevans)

=== 5.11.0 (2018-08-01)

* Fix using the jdbc/sqlserver adapter on JRuby 9.2+ (jeremyevans)

* Fix dumping schema for numeric/decimal columns with default values, broken starting in 5.9.0 (jeremyevans)

* Recognize additional check constraint violations on certain versions of SQLite (jeremyevans)
